tests/errors/preprocessor/russian_symbol_in_error/after_eval_must_be_ckob.c
#EVAL привет 2 + 2

int main()
{
	return 0;
}
